- added function SCIPcomputeLPRelIntPoint() to compute a relative interior point of the current LP
- added function SCIPsepastoreRemoveRedundantCuts() to remove redundant cuts from the separation storage
- added result value SCIP_NEWROUND that allows a separator/constraint handler to start a new separation round (without previous calls to other separators/conshdlrs)

performance improvements:
- performance improvements in prop_vbounds
- child selection rules now get also applied when the relaxation value is equal to the bound changed in branching
- added dual reduction to cons_cumulative.c
- for continuous variables, the pseudo costs update and the pscost branching rule now use the same strategies for updating the pseudo costs and estimating the improvement in the LP bound

fixed bugs:
- fixed bug in propagation of indicator constraints: cannot fix slack variable to 0 if linear constraint is disabled/not active
- fixed bug in cons_bounddisjunction where branching on multiaggregated variables was tried while all aggregation variables are fixed 
- fixed assertion in tree.c w.r.t. node estimation
- fixed bug in presolving of cons_logicor.c: adding variable implications can lead to further reductions; added call to applyFixings()
- fixed bug in cons_linear.c while sorting the eventdatas during the binary variable sorting for propagation
- fixed bug and wrong assert in heur_shiftandpropagate.c when relaxing continuous variables from the problem
- fixed bug in reader_fzn.c w.r.t. cumulative constraints
- fixed bug in copying if the target SCIP already is in solving stage: it might be that the copy of a variable cannot be found/created
- fixed memory leak in reader_pip.c
- fixed not correct merging of variable in logicor constraint handler and changed the name of the method to a common name used by other constraint handlers too(findPairsAndSets->mergeMultiples)

plugins:
- added vbound heuristic (heur_vbounds.{c,h})
- added clique heuristic (heur_clique.{c,h})